--- a/orc8r/cloud/docker/nginx/templates/nginx.conf.j2
+++ b/orc8r/cloud/docker/nginx/templates/nginx.conf.j2
@@ -1,7 +1,6 @@
 user root;
 worker_processes auto;
 pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
 
 events {
   worker_connections 1024;
@@ -71,7 +70,6 @@ http {
   server {
     listen              8443 ssl http2;
     server_name         ~^(?<srv>.+)-{{ controller_hostname }}$;
-    root                /var/www;
 
     error_log  /var/log/nginx/error.log info;
     access_log /var/log/nginx/access.log json_custom;
@@ -118,7 +116,6 @@ http {
   server {
     listen 8444 ssl http2;
     server_name         ~^(?<srv>.+)-{{ controller_hostname }}$;
-    root                /var/www;
 
     error_log  /var/log/nginx/error.log info;
     access_log /var/log/nginx/access.log json_custom;
@@ -147,6 +144,10 @@ http {
   server {
     listen 9443 ssl default_server;
     server_name _;
+
+    # Automatically upgrade HTTP requests to HTTPS
+    # Ref: https://ma.ttias.be/force-redirect-http-https-custom-port-nginx/#forcing-https-redirects-on-non-standard-ports
+    error_page 497 https://$host:9443$request_uri;
 
     error_log  /var/log/nginx/error.log info;
     access_log /var/log/nginx/access.log json_custom;
