--- a/orc8r/cloud/go/obsidian/swagger/v1/css/sidebar.css
+++ b/orc8r/cloud/go/obsidian/swagger/v1/css/sidebar.css
@@ -1,7 +1,7 @@
 /* The sidebar menu */
 .sidenav {
   height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
+  width: 200px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
@@ -13,16 +13,21 @@
 
 /* Sidebar menu items */
 .sidenav a {
-  padding: 6px 8px 6px 16px;
+  padding: 6px 8px 16px 16px;
   text-decoration: none;
+  font-family: Open Sans, sans-serif;
   font-size: 20px;
-  color: #818181;
+  color: #e5e5e5;
   display: block;
 }
 
 /* Change sidebar item color when hovered */
 .sidenav a:hover {
-  color: #f1f1f1;
+  color: #ffa500;
+}
+
+.sidenav .selected {
+  background: #808080;
 }
 
 /* Sidebar home item */
@@ -30,4 +35,9 @@
   padding: 6px 8px 10px 16px;
   font-size: 40px;
   display: block;
+}
+
+/* Prevent overlap with fixed sidebar*/
+.swagger-ui {
+  margin-left: 5%;
 }
