[bare-metal] Fix elasticsearch deployment and update fluentd/orc8r config
Signed-off-by: Matthew Mosesohn <matthew.mosesohn@gmail.com>

--- a/orc8r/cloud/deploy/bare-metal-ansible/roles/magma/elasticsearch/templates/elasticsearch-curator-values.yaml.j2
+++ b/orc8r/cloud/deploy/bare-metal-ansible/roles/magma/elasticsearch/templates/elasticsearch-curator-values.yaml.j2
@@ -25,6 +25,6 @@ configMaps:
     ---
     client:
       hosts:
-        - elasticsearch-client:9200
+        - elasticsearch-master:9200
       port: 9200
 
