--- a/orc8r/cloud/deploy/bare-metal-ansible/roles/magma/kibana/templates/kibana-values.yaml.j2
+++ b/orc8r/cloud/deploy/bare-metal-ansible/roles/magma/kibana/templates/kibana-values.yaml.j2
@@ -8,11 +8,9 @@ env:
 
 files:
   kibana.yml:
-    ## Default Kibana configuration from kibana-docker.
     server.name: kibana
     server.host: "0"
-    ## For kibana < 6.6, use elasticsearch.url instead
-    elasticsearch.hosts: http://elasticsearch-client:9200
+    elasticsearch.hosts: http://elasticsearch-master:9200
 
 dashboardImport:
   enabled: true
